--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^2.2.1",
     "rollup": "^2.69.0",
     "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-typescript2": "^0.31.2",
     "rollup-plugin-vue": "^6.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
