--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "build:esm": "rollup --config build/rollup.config.js"
   },
   "dependencies": {
-    "lodash-es": "^4.17.21",
+    "lodash-es": "^4.17.21"
+  },
+  "peerDependencies": {
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/jest": "^24.0.19",
     "@types/lodash-es": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
@@ -38,6 +41,7 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5",
+    "vue": "^3.0.0",
     "vue-jest": "^5.0.0-0"
   },
   "gitHooks": {
