--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "aic-lego-component",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/aic-lego-component.umd.js",
+  "module": "dist/aic-lego-component.esm.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "npm run clean && npm run build:esm && npm run build:umd",
