--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aic-lego-component",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "main": "dist/aic-lego-component.umd.js",
   "module": "dist/aic-lego-component.esm.js",
@@ -27,7 +27,8 @@
     "lint": "vue-cli-service lint",
     "build:esm": "rollup --config build/rollup.esm.config.js",
     "build:umd": "rollup --config build/rollup.umd.config.js",
-    "clean": "rimraf ./dist"
+    "clean": "rimraf ./dist",
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "lodash-es": "^4.17.21"
